Fix for getting number of audio input channels on Mac.

Don't get channel layout for input since that's not supported on AUHAL.

Plus fixes in ScopedAudioUnit:
* Enable IO before setting current device which is a requirement.
* Use element 0 with global scope, which is the element to use with that scope. (This didn't cause a failure.)

Bug: 794501
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I3879989e30449000dc9d75f756c69738ac54615a