media/audio/mac/scoped_audio_unit.cc
@@ -33,9 +33,27 @@ ScopedAudioUnit::ScopedAudioUnit(AudioDeviceID device, AUElement element) {
     return;
   }
 
+  UInt32 enableIO = element == AUElement::INPUT ? 1 : 0;
+  AudioUnitSetProperty(audio_unit, kAudioOutputUnitProperty_EnableIO,
+                       kAudioUnitScope_Input, AUElement::INPUT, &enableIO,
+                       sizeof(enableIO));
+  if (result != noErr) {
+    OSSTATUS_DLOG(ERROR, result) << "Failed to set enable IO on input.";
+    return;
+  }
+
+  enableIO = element == AUElement::OUTPUT ? 1 : 0;
+  AudioUnitSetProperty(audio_unit, kAudioOutputUnitProperty_EnableIO,
+                       kAudioUnitScope_Output, AUElement::OUTPUT, &enableIO,
+                       sizeof(enableIO));
+  if (result != noErr) {
+    OSSTATUS_DLOG(ERROR, result) << "Failed to set enable IO on output.";
+    return;
+  }
+
   result = AudioUnitSetProperty(
       audio_unit, kAudioOutputUnitProperty_CurrentDevice,
-      kAudioUnitScope_Global, element, &device, sizeof(AudioDeviceID));
+      kAudioUnitScope_Global, 0, &device, sizeof(AudioDeviceID));
   if (result == noErr) {
     audio_unit_ = audio_unit;
     return;
